# libtexpdf

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  azure-pipelines.yml  bmpimage.c  bmpimage.h  cff.c  cff_dict.c  cid.c  cid.h  cidtype0.c  cidtype2.c  cmap.c  cmap.h  cmap_read.c  cmap_write.c  config.h.cmake  config.h.meson  configure  configure.ac  dpxcrypt.c  dpxcrypt.h  dpxfile.c  dpxfile.h  dpxutil.c  dpxutil.h  dvi.c  dvi.h  dvipdfmx.c  dvipdfmx.h  epdf.c  error.c  error.h  fontmap.c  (+70 more)
.github/workflows/: build.yml
build-aux/: kpse-common.m4  libtool.m4
libtexpdf/: Makefile.am  Makefile.in  TODO  agl.c  bmpimage.c  bmpimage.h  cff_dict.c  cid.c  cid.h  cidtype0.c  cidtype2.c  cmap.c  cmap.h  cmap_read.c  cmap_write.c  configure.ac  cs_type2.c  dpxcrypt.c  dpxfile.c  dpxutil.c  dpxutil.h  epdf.c  epdf.h  error.c  error.h  fontmap.c  fontmap.h  jp2image.c  jp2image.h  jpegimage.h  libtexpdf.h  mfileio.c  mfileio.h  mpost.c  mpost.h  otl_conf.c  otl_opt.c  pdfcolor.c  pdfcolor.h  pdfdev.c  (+41 more)
libtexpdf/build-aux/.svn/: wc.db
libtexpdf/m4/: kpse-common.m4
m4/: kpse-win32.m4  libtool.m4  ltoptions.m4
tests/: meson.build  test-create.c
win32/: unistd.h  win32.h
